--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "getpop/generic-customposts",
+    "name": "pop-schema/generic-customposts",
     "type": "library",
     "description": "Query for any custom post, with or without having a type associated to the schema",
     "keywords": [
@@ -19,7 +19,7 @@
     "prefer-stable": true,
     "require": {
         "php": "~7.2",
-        "getpop/customposts": "dev-master"
+        "pop-schema/customposts": "dev-master"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
@@ -28,12 +28,12 @@
     },
     "autoload": {
         "psr-4": {
-            "PoP\\GenericCustomPosts\\": "src"
+            "PoPSchema\\GenericCustomPosts\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "PoP\\GenericCustomPosts\\": "tests"
+            "PoPSchema\\GenericCustomPosts\\": "tests"
         }
     },
     "scripts": {
